# task_arch

./: .gitattributes  .gitconfig  .gitignore  readme.md
prj_netologiy/: README.md
prj_netologiy/Cource_prj_v2/: Cource_prj_v2.cpp  input_x.txt
prj_netologiy/Shablon/: Task_1.cpp
prj_netologiy/Task_8/: Task_8.cpp  task_8.txt
prj_netologiy/exemp1/: Resource.h
prj_netologiy/exemp_1/: Base.cpp  Base.h  Task.h  exemp_1.cpp
prj_netologiy_yandex/Course_project_1/: Course_project_1.cpp
prj_netologiy_yandex/NIOPP/Task_1/: Block_1.cpp  Block_1.h  Block_2.cpp  Block_2.h  Block_3.cpp  Block_3.h  Block_4.cpp  Block_4.h  Block_5.cpp  Block_5.h  CMakeLists.txt  Config.cpp  Config.h  Task_1.cpp  Task_1.h
prj_netologiy_yandex/Shablon/: Shablon.cpp
prj_netologiy_yandex/Task_(string)/: Task_(string).cpp
prj_netologiy_yandex/Task_1_(arr_&)/: Task_1_(arr_&).cpp
prj_netologiy_yandex/Task_1_(file)/: Task_1_(file).cpp
prj_netologiy_yandex/Task_1_(scope_of_variables)/: Task_1_(scope_of_variables).cpp
prj_netologiy_yandex/Task_1_(string)/: Task_1_(string).cpp
prj_netologiy_yandex/Task_2_(arr_&)/: Task_2_(arr_&).cpp
prj_netologiy_yandex/Task_2_(dinamic_arr)/: Task_2_(dinamic_arr).cpp
prj_netologiy_yandex/Task_2_(scope_of_variables)/: Task_2_(scope_of_variables).cpp
prj_netologiy_yandex/Task_2_(scope_of_variablse)/: Task_2_(scope_of_variablse).cpp
prj_netologiy_yandex/Task_2_(string)/: Task_2_(string).cpp
prj_netologiy_yandex/Task_3_(arr_&)/: Task_3_(arr_&).cpp
prj_netologiy_yandex/Task_3_(dinanic_arr)/: Task_3_(dinanic_arr).cpp
(+171 files in other folders)
